--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,21 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+container {
+    margin-left: 40px;
+}
+
+.label {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.value {
+    color: #474747;
+    position: absolute;
+    left: 200px;
+}
+.message .value {
+    font-style: italic;
+}
